Added Page Title

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./styles/prism.css" />
     <link rel="stylesheet" href="styles/style.css" />
-    <title>Document</title>
+    <title>Fake eCommerce API | LoremIpsum Data for ecommerce products</title>
   </head>
 
   <body class="">
